--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 
 <!-- Slider end -->
 
+<!-- about container start -->
 
 <div class="container">
     <div class="about">
@@ -169,7 +170,76 @@
     </div>
 </div>
 
+<!-- about container end -->
 
+
+<!-- Detox container start -->
+
+
+<div class="detox-container">
+    <h3>Fresh Smoothie</h3>
+    <h1>Recipe Detox Smoothie</h1>
+    <p>Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel 
+            scelerisque nisl consectetur et.</p>
+    <div class="recipe">
+        <div class="left">
+            <div class="text-top">
+                <div class="text">
+                    <h4>Cucumber</h4>
+                    <p>Maecenas faucibus mollis interdum. Aenean eu leo quam.</p>
+                </div>
+                <div class="img">
+                    <img src="images/oar2-ib1_180x.webp">
+                </div>
+            </div>
+
+            <div class="text-btm">
+                <div class="text">
+                    <h4>Apple</h4>
+                    <p>Maecenas faucibus mollis interdum. Aenean eu leo quam.</p>
+                </div>
+                <div class="img">
+                    <img src="images/oar2-ib2_180x.webp">
+                </div>
+            </div>
+            
+        </div>
+
+
+        <div class="center">
+            <img src="images/oar2-img_detox_900x.webp">
+
+            <button>View All recipe</button>
+        </div>
+
+
+
+        <div class="right">
+
+            <div class="text-top">
+                <div class="text">
+                    <h4>Lemon</h4>
+                    <p>Maecenas faucibus mollis interdum. Aenean eu leo quam.</p>
+                </div>
+                <div class="img">
+                    <img src="images/oar2-ib3_180x.webp">
+                </div>
+            </div>
+
+            <div class="text-btm">
+                <div class="text">
+                    <h4>Fresh Spinach</h4>
+                    <p>Maecenas faucibus mollis interdum. Aenean eu leo quam.</p>
+                </div>
+                <div class="img">
+                    <img src="images/oar2-ib4_180x.webp">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Detox container end -->
 
 
 </body>
