--- a/index.html
+++ b/index.html
@@ -239,7 +239,26 @@
     </div>
 </div>
 
-<!-- Detox container end -->
+<!---------------------------------------------- Detox container end --------------------------------->
+
+
+<!---------------------------------------------- Feature Products start --------------------------------->
+
+
+<div class="product-contaner">
+    <h3>Fresh Smoothie</h3>
+    <h1>Recipe Detox Smoothie</h1>
+    <p>Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel 
+            scelerisque nisl consectetur et.</p>
+
+    <ul class="nav">
+        <li><a href="#">All</a></li>
+    </ul>
+
+</div>
+
+
+<!---------------------------------------------- Feature Products end --------------------------------->
 
 
 </body>
