--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
 
         <div class="logo">
             <img src="images/logo_28746f1e-658f-4568-912f-9c2389ddfb40_105x.webp" >
+            <div class="left" style="display: none;">
+                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
         </div>
+       
 
         <div >
             <i class="fa-solid fa-bars"></i>
@@ -734,12 +739,56 @@
 <!---------------------------------------------- footer start------------------------------------->
 
 <div class="footer">
-    <div class="left-image"><img src="images/bg1.png"></div>
+    <!-- <div class="left-image"><img src="images/bg1.png"></div> -->
     <div class="newsletter">
-        <h3>Subscribe</h3>
-    <h1>Subscribe Newsletter</h1>
+        <div class="left">
+            <h3>Subscribe</h3>
+            <h1>Subscribe Newsletter</h1>
+        </div>
+        <div class="right">
+            <input type="text" placeholder="Your email">
+            <button>subscribe</button>
+        </div>
+        
     </div>
-    <div class="right-image"><img src="images/bg2.avif"></div>
+    <!-- <div class="right-image"><img src="images/bg2.avif"></div> -->
+</div>
+
+<div class="contact">
+    <div class="c1">
+        <h3>Contact Our Farm</h3>
+        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        <p><span><i class="fa-solid fa-location-dot"></i></span>PO Box 16122 Collins Street West</p>
+        <p><span><i class="fa-solid fa-phone"></i></span>111-222-3333</p>
+        <p><span><i class="fa-solid fa-envelope"></i></span>support@kalathemes.com</p>
+    </div>
+    <div class="c1">
+        <h3>Follow Me</h3>
+        <p><span><i class="fa-brands fa-twitter"></i></span>Twitter</p>
+        <p><span><i class="fa-brands fa-facebook"></i></span>Facebook</p>
+        <p><span><i class="fa-brands fa-instagram"></i></span>Instagram</p>
+        <p><span><i class="fa-brands fa-tiktok"></i></span>Tiktok</p>
+        <p><span><i class="fa-brands fa-youtube"></i></span>Youtube</p>
+    </div>
+    <div class="c1">
+        <h3>Useful Links</h3>
+        <p>About us</p>
+        <p>Shipping Policy</p>
+        <p>Terms of Service</p>
+        <p>Privacy Policy</p>
+        <p>Contact us</p>
+    </div>
+    <div class="c2">
+        <div class="box">
+            <img src="images/logo_28746f1e-658f-4568-912f-9c2389ddfb40_180x.webp">
+            <P>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, 
+                ut fermentum massa justo sit amet risus. Curabitur blandit tempusporttitor nullam quis.</P>
+        </div>
+    </div>
+</div>
+
+<div class="footer-btm">
+    <h3>Copyright © 2023 <b>OARS 2.</b> All Rights Reserved</h3>
 </div>
 
 <!---------------------------------------------- footer end------------------------------------>
